--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: webapp
 description: The WebApp package simplifies fast and efficient server-side web app development with Dart, offering tools for APIs, databases, WebSockets, and scalable projects
 
-version: 1.0.33
+version: 1.0.34
 homepage: https://webapp.uproid.com/
 repository: https://github.com/uproid/webapp.git
 issue_tracker: https://github.com/uproid/webapp/issues
@@ -26,28 +26,29 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
-  build_runner: ^2.0.0
-  build_web_compilers: ^4.0.0
-  lints: ^4.0.0
+  build_runner: ^2.4.13
+  # build_web_compilers: ^4.0.11
+  # lints: ^5.0.0
   test: ^1.25.8
 
 # Add regular dependencies here.
 dependencies:
-  path: ^1.9.0
+  #path: ^1.9.1
   dotenv: ^4.2.0
-  json_annotation: ^4.9.0
+  #json_annotation: ^4.9.0
   mongo_dart: ^0.10.3
   encrypt: ^5.0.3
-  crypto: ^3.0.3
+  #crypto: ^3.0.6
   logger: ^2.3.0
-  mailer: ^6.1.1
+  mailer: ^6.2.0
   jinja: ^0.6.0 
-  intl: ^0.19.0
-  mime: ^1.0.5
+  #intl: ^0.19.0
+  #mime: ^1.0.6
   cron: ^0.6.1
   base32: ^2.1.3
   archive: ^3.6.1
-  http: ^1.2.2
+  #http: ^1.2.2
+  capp: ^1.0.1
 
 executables:
   webapp: webapp
