--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,21 +33,21 @@ dev_dependencies:
 
 # Add regular dependencies here.
 dependencies:
-  #path: ^1.9.1
+  path: ^1.9.1
   dotenv: ^4.2.0
-  #json_annotation: ^4.9.0
+  json_annotation: ^4.9.0
   mongo_dart: ^0.10.3
   encrypt: ^5.0.3
-  #crypto: ^3.0.6
+  crypto: ^3.0.6
   logger: ^2.3.0
   mailer: ^6.2.0
   jinja: ^0.6.0 
-  #intl: ^0.19.0
-  #mime: ^1.0.6
+  intl: ^0.19.0
+  mime: ^1.0.6
   cron: ^0.6.1
   base32: ^2.1.3
   archive: ^3.6.1
-  #http: ^1.2.2
+  http: ^1.2.2
   capp: ^1.0.1
 
 executables:
