--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: webapp
 description: The WebApp package simplifies fast and efficient server-side web app development with Dart, offering tools for APIs, databases, WebSockets, and scalable projects
 
-version: 1.1.1
+version: 1.1.2
 homepage: https://webapp.uproid.com/
 repository: https://github.com/uproid/webapp.git
 issue_tracker: https://github.com/uproid/webapp/issues
@@ -11,6 +11,8 @@ platforms:
   linux:
   windows:
   macos:
+  ios:
+  android: 
 
 topics:
   - application
@@ -42,13 +44,13 @@ dependencies:
   logger: ^2.3.0
   mailer: ^6.2.0
   jinja: ^0.6.0 
-  intl: ^0.19.0
+  intl: ^0.17.0
   mime: ^1.0.6
   cron: ^0.6.1
   base32: ^2.1.3
   archive: ^3.6.1
   http: ^1.2.2
-  capp: ^1.0.1
+  capp: ^1.0.2
 
 executables:
   webapp: webapp
