--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: webapp
-description: The WebApp package simplifies fast and efficient server-side web app development with Dart, offering tools for APIs, MongoDB/MySQL databases, WebSockets, and scalable projects
+description: The WebApp package simplifies fast and efficient server-side web app development with Dart, offering tools for APIs, databases, WebSockets, and scalable projects
 
-version: 1.1.19
+version: 1.1.18
 homepage: https://webapp.uproid.com/
 repository: https://github.com/uproid/webapp.git
 issue_tracker: https://github.com/uproid/webapp/issues
@@ -13,8 +13,6 @@ platforms:
   macos:
   ios:
   android: 
-funding:
-  - https://github.com/sponsors/uproid
 
 topics:
   - application
@@ -22,11 +20,6 @@ topics:
   - backend
   - database
   - webapp
-  - mongodb
-  - mysql
-  - websocket
-  - api
-  - framework
   
 sdk:
   dart:
@@ -50,7 +43,7 @@ dependencies:
   crypto: ^3.0.6
   logger: ^2.3.0
   mailer: ^6.2.0
-  jinja: ^0.6.4  
+  jinja: ^0.6.2 
   intl: ^0.20.2
   mime: ^2.0.0 
   cron: ^0.6.1
@@ -58,11 +51,7 @@ dependencies:
   archive: ^4.0.2
   http: ^1.2.2
   capp: ^1.0.3
-  mysql_client: ^0.0.27
-  sqler: ^1.1.2
-  # sqler: 
-  #   git:
-  #     url: https://github.com/uproid/sqler.git
+
 executables:
   webapp: webapp
 
