--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -10,12 +10,23 @@ on:
     branches: [ "*" ]
 
 jobs:
+  scan-pr:
+    steps:
+      - uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@v2.2.1"
+      - name: Run OSV-Scanner
+        run: osv-scanner --lockfile pubspec.lock
+
   build:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      # Note: This workflow uses the latest stable version of the Dart SDK.
+      # You can specify other versions if desired, see documentation here:
+      # https://github.com/dart-lang/setup-dart/blob/main/README.md
+      # - uses: dart-lang/setup-dart@v1
+      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
         run: dart pub get
@@ -29,11 +40,6 @@ jobs:
             else
               echo "No forbidden text found";
           fi
-
-      - name: Run OSV-Scanner
-        uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-        with:
-          scan-args: "--recursive"
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
