--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -9,12 +9,13 @@ on:
   push:
     branches: [ "*" ]
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   scan-pr:
-    steps:
-      - uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@v2.2.1"
-      - name: Run OSV-Scanner
-        run: osv-scanner --lockfile pubspec.lock
+    uses: "google/osv-scanner-action/.github/workflows/osv-scanner-reusable-pr.yml@v2.2.1"
 
   build:
     runs-on: ubuntu-latest
