--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run OSV-Scanner
         run: |
-          curl -sSfL https://github.com/google/osv-scanner/releases/latest/download/osv-scanner-linux-amd64 -o osv-scanner
+          curl -sSfL https://github.com/google/osv-scanner/releases/download/v2.2.1/osv-scanner_linux_amd64 -o osv-scanner
           chmod +x osv-scanner
           ./osv-scanner --lockfile=pubspec.lock
 
