--- a/example/public/assets/package.json
+++ b/example/public/assets/package.json
@@ -7,8 +7,8 @@
     "tailwind:watch": "tailwindcss -c tailwind.config.js -i ./tailwind.input.css -o ./generated-tailwind.css --watch"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.10",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.10"
   }
 }
