--- a/.github/workflows/update_example.yaml
+++ b/.github/workflows/update_example.yaml
@@ -1,21 +1,24 @@
 name: Sync example repo
+
 on:
   push:
     branches:
       - master
+
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Push example
+
+      - name: Push example to second repo
         run: |
           git config --global user.name "uproid"
           git config --global user.email "info@uproid.com"
 
           cd example
           git init
-          git remote add origin https://<USEKEY>@github.com/uproid/example-webapp-docker.git
+          git remote add origin https://x-access-token:${{ secrets.USEKEY }}@github.com/uproid/example-webapp-docker.git
           git add .
           git commit -m "Update from main repo"
           git push --force origin master
