--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -3,16 +3,17 @@ upstream webapp {
 }
 
 server {
-    listen 80;
+    listen 8080;
     server_name localhost;
 
     # Proxy all requests to webapp:8085
     location / {
         proxy_pass http://webapp;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
         
         # WebSocket support
         proxy_http_version 1.1;
