Fixed WebSocket confing for nginx

--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -8,22 +8,13 @@ server {
 
     # Proxy all requests to webapp:8085
     location / {
-        proxy_pass http://webapp;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $http_host;
-        
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        root /www/public;
+        index "index.php";
+        # Serve the index file if found
+        try_files $uri $uri/ =404;
+        error_page 404 = @dart;
+        error_page 403 = @dart;
+        error_page 405 = @dart;
     }
 
     # Optional: Add health check endpoint
@@ -31,5 +22,24 @@ server {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
+    }
+
+    location @dart {
+        proxy_pass http://webapp;
+        proxy_pass_request_body on;
+        proxy_pass_request_headers on;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location ~ ^/(ws|debugger)/ {
+        proxy_pass http://webapp;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
     }
 }
