--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -4,12 +4,12 @@ upstream webapp {
 
 server {
     listen 8080;
-    server_name localhost;
+    server_name localhost:8080;
+    client_max_body_size 20M;
 
     # Proxy all requests to webapp:8085
     location / {
         root /www/public;
-        index "index.php";
         # Serve the index file if found
         try_files $uri $uri/ =404;
         error_page 404 = @dart;
@@ -17,29 +17,32 @@ server {
         error_page 405 = @dart;
     }
 
-    # Optional: Add health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
+    # WebSocket support for /ws and /debugger paths
+    location ~ ^/(ws|debugger)/ {
+        proxy_pass http://webapp;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host:$server_port;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Original-Host $http_host;
     }
 
     location @dart {
         proxy_pass http://webapp;
         proxy_pass_request_body on;
         proxy_pass_request_headers on;
-
-        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Original-Host $http_host;
         proxy_redirect off;
-    }
-
-    location ~ ^/(ws|debugger)/ {
-        proxy_pass http://webapp;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header Host $host;
     }
 }
