--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,5 +17,8 @@ dev_dependencies:
 dependencies:
   webapp:
     #path: ../
+    git: 
+      url: https://github.com/uproid/webapp.git
+      ref: htmler
 
   watcher:
