--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -19,17 +19,17 @@ server {
 
     # WebSocket support for /ws and /debugger paths
     location ~ ^/(ws|debugger)/ {
-        proxy_pass http://webapp;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header Host $host:$server_port;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host:$server_port;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_set_header X-Original-Host $http_host;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy false;
+
+        proxy_pass http://webapp;
+        proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location @dart {
