--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -1,11 +1,17 @@
 upstream webapp {
     server webapp:8085;
+    keepalive 32;
 }
 
 server {
     listen 8080;
     server_name localhost:8080;
     client_max_body_size 20M;
+    
+    # WebSocket and keepalive settings
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
+    keepalive_timeout 3600s;
 
     # Proxy all requests to webapp:8085
     location / {
@@ -18,18 +24,31 @@ server {
     }
 
     # WebSocket support for /ws and /debugger paths
-    location ~ ^/(ws|debugger)/ {
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-NginX-Proxy false;
-
+    location ~ ^/(ws|debugger) {
         proxy_pass http://webapp;
-        proxy_redirect off;
-
+        
+        # Essential WebSocket headers - pass them as-is
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $http_connection;
+        
+        # Preserve original headers
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Critical for WebSocket - don't buffer
+        proxy_buffering off;
+        proxy_cache off;
+        
+        # Timeout settings for WebSocket
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+        proxy_connect_timeout 60s;
+        
+        # Disable redirects
+        proxy_redirect off;
     }
 
     location @dart {
