--- a/example/docker/nginx.conf
+++ b/example/docker/nginx.conf
@@ -15,9 +15,9 @@ server {
 
     # Proxy all requests to webapp:8085
     location / {
-        root /www/public;
+        root /var/www/html;
         # Serve the index file if found
-        try_files $uri $uri/ =404;
+        try_files /public$uri /public$uri/ =404;
         error_page 404 = @dart;
         error_page 403 = @dart;
         error_page 405 = @dart;
