--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./public/:/usr/share/nginx/html
+      - ./public/:/var/www/html/public
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
 
   mongodb:
