--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,9 +16,6 @@ dev_dependencies:
 
 dependencies:
   webapp:
-    path: ../
-    # git: 
-    #   url: https://github.com/uproid/webapp.git
-    ##   ref: htmler
+    # path: ../
 
   watcher:
