--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   # build_web_compilers: ^4.0.11
   # lints: ^5.0.0
   test: ^1.25.8
+  html: ^0.15.6
 
 # Add regular dependencies here.
 dependencies:
