--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   # lints: ^5.0.0
   test: ^1.25.8
   html: ^0.15.6
+  lints: ^6.0.0
 
 # Add regular dependencies here.
 dependencies:
