--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   http: ^1.5.0
   capp: ^1.1.2
   mysql_client: ^0.0.27
-  sqler: 1.1.4
+  sqler: ^1.1.4
   html_unescape: ^2.0.0
 executables:
   webapp: webapp
