--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "GitHub Dark Default",
+  "workbench.colorTheme": "Default Dark Modern",
   "dart.flutterHotReloadOnSave": "all",
   "dart.hotReloadOnSave": "all",
   "html.validate.styles": false,
